--- a/frontend/src/app/components/flight-list/flight-list.component.html
+++ b/frontend/src/app/components/flight-list/flight-list.component.html
@@ -22,40 +22,42 @@
       </div>
    </div>
    <br>
-  
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th>Kuupäev</th>
-        <th>Lennufirma</th>
-        <th>Sihtkoht</th>
-        <th>Väljub</th>
-        <th>Saabub</th>
-        <th>Hind (€)</th>
-        <th>Reisijate arv</th>
-        <th>Tegevus</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let flight of filteredFlights">
-        <td>{{ flight.date | date:'dd.MM.yyyy' }}</td>
-        <td>{{ flight.airline }}</td>
-        <td>{{ flight.destination }}</td>
-        <td>{{ flight.departureTime.substring(0, 5) }}</td>
-        <td>{{ flight.arrivalTime | date:'HH:mm dd.MM.yyyy' }}</td>
-        <td>{{ flight.price }}</td>
-        <td>
-          <select [(ngModel)]="selectedPassengerCount">
-            <option *ngFor="let count of [1, 2, 3, 4, 5]" [value]="count">{{ count }}</option>
-          </select>
-        </td>
-        <td>
-          <button class="btn btn-primary" [disabled]="!selectedPassengerCount" (click)="selectFlight(flight)">Vali</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
 
+   <div class="table-container">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Kuupäev</th>
+          <th>Lennufirma</th>
+          <th>Sihtkoht</th>
+          <th>Väljub</th>
+          <th>Saabub</th>
+          <th>Hind (€)</th>
+          <th>Reisijate arv</th>
+          <th>Tegevus</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let flight of filteredFlights">
+          <td>{{ flight.date | date:'dd.MM.yyyy' }}</td>
+          <td>{{ flight.airline }}</td>
+          <td>{{ flight.destination }}</td>
+          <td>{{ flight.departureTime.substring(0, 5) }}</td>
+          <td>{{ flight.arrivalTime | date:'HH:mm dd.MM.yyyy' }}</td>
+          <td>{{ flight.price }}</td>
+          <td>
+            <select [(ngModel)]="selectedPassengerCount">
+              <option *ngFor="let count of [1, 2, 3, 4, 5]" [value]="count">{{ count }}</option>
+            </select>
+          </td>
+          <td>
+            <button class="btn btn-primary" [disabled]="!selectedPassengerCount" (click)="selectFlight(flight)">Vali</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+   </div>
+  
   <!-- Display the seat selection when the flight is selected -->
   <app-seat-selection 
   *ngIf="selectedFlight && selectedPassengerCount > 0" 
