--- a/frontend/src/app/components/seat-selection/seat-selection.component.css
+++ b/frontend/src/app/components/seat-selection/seat-selection.component.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+
 }
 
 .seat-item {
@@ -40,4 +41,26 @@
   background-color: #31ac00 !important;
   color: #fff;
   font-weight: bold;
+}
+
+.seat-selection-container {
+  background-color: #ffffffa4; 
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px; 
+  margin: 0 auto; 
+  padding-bottom: 10px; 
+}
+
+.passenger-name-input {
+  max-width: 300px;
+  margin: 0 auto; 
+  text-align: center; 
+}
+
+.bold-label {
+  font-weight: bold;
+  font-size: medium;
+  padding-top: 10px;
 }
