--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-image: url('src\app\images\background.png'); 
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+
 h1 {
+    text-align: right;
+    color: #000000;
+    font-size: 2em !important;
+    font-weight: bold !important;
+}
+
+h2 {
     text-align: center;
+    color: #000000;
+    font-size: 1.5em !important;
+    font-weight: bold !important;
 }
