--- a/frontend/src/app/components/flight-list/flight-list.component.html
+++ b/frontend/src/app/components/flight-list/flight-list.component.html
@@ -1,19 +1,28 @@
 <div class="container mt-4">
   <h1>Lennuplaan</h1>
 
-  <!-- Filtrid -->
+  <!-- Filters -->
    <div class="row">
       <div class="col-md-3">
         Sihtkoht<input type="text" placeholder="Linn" [(ngModel)]="filters.destination" class="form-control mb-2">
       </div>
       <div class="col-md-3">
-        Väljumispäev<input type="date" placeholder="Kuupäev" [(ngModel)]="filters.date" class="form-control mb-2">
+        Väljumispäev<input type="date" placeholder="Kuupäev" [(ngModel)]="filters.departureDate" class="form-control mb-2">
       </div>
       <div class="col-md-3">
-        Väljumisaeg<input type="time" placeholder="Väljumisaeg" [(ngModel)]="filters.departureTime" class="form-control mb-2">
+        Hind kuni<input type="number" placeholder="Hind (€)" [(ngModel)]="filters.price" class="form-control mb-2">
       </div>
-      <div class="col-md-3">
-        Hind<input type="number" placeholder="Hind (€)" [(ngModel)]="filters.price" class="form-control mb-2">
+      <div class="col-md-2">
+        Mugavus
+        <select [(ngModel)]="selectedSeatClass" class="form-control mb-2">
+          <option *ngFor="let count of ['FIRST_CLASS', 'BUSINESS', 'ECONOMY']" [ngValue]="count">{{ count }}</option>
+        </select>
+      </div>
+      <div class="col-md-1">
+        Reisijate arv
+        <select [(ngModel)]="selectedPassengerCount" class="form-control mb-2">
+          <option *ngFor="let count of [1,2,3,4,5]" [value]="count">{{ count }}</option>
+        </select>
       </div>
       <p>
       <div class="col-12 text-center">
@@ -33,7 +42,6 @@
           <th>Väljub</th>
           <th>Saabub</th>
           <th>Hind (€)</th>
-          <th>Reisijate arv</th>
           <th>Tegevus</th>
         </tr>
       </thead>
@@ -42,27 +50,23 @@
           <td>{{ flight.date | date:'dd.MM.yyyy' }}</td>
           <td>{{ flight.airline }}</td>
           <td>{{ flight.destination }}</td>
-          <td>{{ flight.departureTime.substring(0, 5) }}</td>
-          <td>{{ flight.arrivalTime | date:'HH:mm dd.MM.yyyy' }}</td>
+          <td>{{ flight.departureTime.slice(0,5) }}</td>
+          <td>{{ flight.arrivalTime | date:'HH:mm | dd.MM.yyyy' }}</td>
           <td>{{ flight.price }}</td>
           <td>
-            <select [(ngModel)]="selectedPassengerCount">
-              <option *ngFor="let count of [1, 2, 3, 4, 5]" [value]="count">{{ count }}</option>
-            </select>
-          </td>
-          <td>
-            <button class="btn btn-primary" [disabled]="!selectedPassengerCount" (click)="selectFlight(flight)">Vali</button>
+            <button class="btn btn-primary" (click)="selectFlight(flight)">Vali</button>
           </td>
         </tr>
       </tbody>
     </table>
    </div>
-  
+
   <!-- Display the seat selection when the flight is selected -->
-  <app-seat-selection 
-  *ngIf="selectedFlight && selectedPassengerCount > 0" 
+  <app-seat-selection
+  *ngIf="flightIsSelected"
     [flight]="selectedFlight"
     [passengerCount]="selectedPassengerCount"
+    [selectedSeatClass]="selectedSeatClass"
     (back)="clearFlightSelection()">
   </app-seat-selection>
 </div>
